@@ -21,9 +21,7 @@ echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin;
 
 # Copy-paste from ./ciRunSbt.sh with slight difference that args are passed in one string - see https://stackoverflow.com/a/3816747
 ARGS="release $@"
-JAVA_OPTS_VAL="-Xmx2G -XX:ReservedCodeCacheSize=256M -Xss6M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
-echo "Executing: JAVA_OPTS=\"$JAVA_OPTS_VAL\" sbt \"$ARGS\""
-JAVA_OPTS="$JAVA_OPTS_VAL" sbt -DdockerUpLatest=${dockerUpdateLatest} "$ARGS"
+sbt -J-Xss6M -J-Xms4G -J-Xmx4G -J-XX:ReservedCodeCacheSize=256M -J-XX:MaxMetaspaceSize=2500M -DdockerUpLatest=${dockerUpdateLatest} "$ARGS"
 
 if [[ "$BACKPORT" == "true" ]]; then
   echo "Backport release - Skipping update of master and dockerhub readme"
@@ -32,5 +30,5 @@ elif [[ "$RC" == "true" ]]; then
 else
   echo "Normal release - Updating master and dockerhub readme"
   git push origin HEAD:master -f
-  ./dockerhub/pulishReadme.sh
+  ./dockerhub/publishReadme.sh
 fi
